# loki

./: .gitignore  CHANGELOG.md  HANDOFF.archive.md  HANDOFF.md  HOWTO.md  LICENSE  README.md  STATE.md  loom-loki.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FAQ.md  HOWTO.md
loki/: __init__.py  __main__.py  classify_helpers.py  cli.py
loki/analysis/: __init__.py  api.py  errors.py  findings.py  matching.py  pairing.py  pipeline.py  posture.py  report.py  scoring.py  timing.py  version.py
loki/baseline/: __init__.py  concurrency.py  envelope.py  errors.py  naming.py  quarantine.py  schema.py  store.py
loki/classification/: __init__.py  api.py  classifier.py  errors.py  pipeline.py  signatures.py  timing.py  version.py
loki/extraction/: __init__.py  api.py  config.py  detection.py  errors.py  ids.py  inner_carve.py  manifest.py  streaming.py  timing.py
loki/feeds/: __init__.py  cache.py  cli.py  cpe.py  errors.py  implants.py  models.py  refresh.py  registry.py  timing.py  trust.py  version.py
loki/fleet/: __init__.py  aggregation.py  api.py  cli.py  errors.py  membership.py  models.py  version.py
loki/gui/: __init__.py  analysis_worker.py  app.py  baseline_load_worker.py  extraction_worker.py  main_window.py  navigation.py  workspace.py
loki/models/: __init__.py  analysis.py  baseline.py  classification.py  config.py  enums.py  firmware.py  reports.py
loki/verification/: __init__.py  errors.py  trust_store.py  verifier.py  version.py
scripts/: build_app.sh  codesign_local_macos.sh  smoke_gui.py
specs/analysis-engine/: design.md  requirements-tension-pass.md  tasks.md
specs/baseline-persistence/: design.md  requirements.md  tasks.md
specs/classification-cli/: design.md  requirements-tension-pass.md  requirements.md  tasks.md
specs/classification-pipeline/: requirements.md  tasks.md
specs/consumer-wiring/: requirements-tension-pass.md  requirements.md
specs/extraction-pipeline/: tasks.md
specs/feeds/: design.md  requirements-tension-pass.md  tasks.md
specs/fleet-analysis/: design.md
specs/gui-views/: design.md  requirements-tension-pass.md  requirements.md  tasks.md
specs/loki-data-models/: design.md
tests/: conftest.py  test_analysis_smoke.py  test_classification_smoke.py  test_cli_analyze.py  test_cli_baseline.py  test_cli_extract.py  test_property_invariants.py  test_property_round_trip.py  test_smoke.py
tests/analysis/: __init__.py  _helpers.py  conftest.py  test_analysis_config_extension.py  test_api.py  test_cancellation_marker.py  test_errors.py  test_finding_evidence_extension.py  test_finding_id.py  test_findings_classification_gap.py  test_findings_classification_mismatch.py  test_findings_missing_required.py  test_findings_signature_regression.py  test_findings_unexpected_component.py  test_log_no_leakage.py  test_match_strategy_enum.py  test_matching.py  test_no_log_leakage.py  test_no_side_channels.py  test_pairing.py  test_performance.py  test_pipeline.py  test_posture.py  test_properties.py  test_report.py  test_scoring.py  test_signature_expired.py  test_timing.py  test_version.py
tests/baseline/: conftest.py  test_concurrency.py  test_determinism.py  test_envelope.py  test_exceptions.py  test_fixtures.py  test_golden.py  test_log_no_leakage.py  test_manifest_invariants.py  test_naming.py  test_no_side_channels.py  test_performance.py  test_quarantine.py  test_schema_version.py  test_store_basics.py  test_store_concurrency.py  test_store_errors.py  test_store_load.py  test_store_load_callbacks.py  test_store_save.py  test_store_singletons.py
tests/classification/: __init__.py  conftest.py  test_api_contract.py  test_classifier.py  test_classifier_property.py  test_determinism.py  test_exceptions.py  test_fixtures.py  test_golden.py  test_log_no_leakage.py  test_manifest_invariants.py  test_no_log_leakage.py  test_no_side_channels.py  test_performance.py  test_pipeline.py  test_pipeline_cancel.py  test_pipeline_dual_record.py  test_pipeline_errors.py  test_pipeline_inner.py  test_pipeline_progress.py  test_signature_verification.py  test_signatures.py  test_timing.py  test_version.py
tests/classify_cli/: _helpers.py  conftest.py  test_argparse.py  test_cancellation.py  test_debug_flag.py  test_determinism.py  test_exit_codes.py  test_help_text.py  test_helpers.py  test_input_paths.py  test_no_leakage.py  test_no_side_channels.py  test_performance.py  test_progress.py  test_sigint_e2e.py  test_smoke.py  test_stderr_summary.py  test_stderr_summary_emission.py  test_stdin_equivalence.py  test_stdout_shape.py  test_summary_only.py
tests/consumer_wiring/: test_analysis_cve_surfacing.py  test_backward_compat.py  test_classification_cve_population.py  test_properties.py
tests/extraction/: conftest.py  test_api_contract.py  test_determinism.py  test_exceptions.py  test_extractor_base.py  test_extractor_capsule.py  test_extractor_ffs.py  test_extractor_ifd.py  test_extractor_microcode.py  test_extractor_option_rom.py  test_extractor_uefi_volume.py  test_fixtures.py  test_format_detection.py  test_golden.py  test_ids.py  test_inner_carve.py  test_log_no_leakage.py  test_manifest_builder.py  test_manifest_invariants.py  test_no_side_channels.py  test_performance.py  test_streaming.py  test_timing.py  test_tool_base.py  test_tool_optional_wrappers.py  test_tool_uefi_firmware.py
tests/feeds/: conftest.py  test_cache.py  test_cli.py  test_cpe.py  test_errors.py  test_feeds_config.py  test_implant_loader.py  test_implant_lookup.py  test_log_no_leakage.py  test_models.py  test_no_log_leakage.py  test_no_request_leakage_ast.py  test_no_request_leakage_dynamic.py  test_no_side_channels.py  test_performance.py  test_properties.py  test_query_derivation.py  test_redirect_policy.py  test_refresh.py  test_registry.py  test_smoke.py  test_timing.py  test_tls_verification.py  test_trust.py
tests/fleet/: conftest.py  test_aggregation.py  test_api.py  test_cli.py  test_determinism.py  test_errors.py  test_membership.py  test_performance.py  test_properties.py  test_smoke.py
tests/gui/: conftest.py  test_baseline_actions.py  (+5 more)
(+86 files in other folders)
